--- a/style_gallery.css
+++ b/style_gallery.css
@@ -29,8 +29,9 @@ hr {
     height: 2px;
     border: none;
     margin: 10px auto 20px;
-    background: linear-gradient(to right, rgba(51, 51, 51, 0), #333, rgba(51, 51, 51, 0));
+    background: linear-gradient(to right, #D9E5E8, #62929E, #D9E5E8);
 }
+
 
 
 /* Table styling */
